recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:7: error: not found: value sierpinski
      sierpinski (levels - 1, sides, length * shrink, shrink)
      ^