recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  for (i <- 0 to sides - 1) {
    avance (length)
    if (levels > 1) {
      right ((levels % 2 * 2 - 1) * 360 / sides)
    } else {
      sierpinski (levels - 1, sides, length * shrink, shrink)
    }
  }
}